# anonymizer_hu

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docker/: entrypoint.sh  free_port_finder.sh  install.sh
models/: definite_entity_map.json  entity_map.json  label_map.json  mask_map.json
src/anonymizer/: __init__.py  api.py  constants.py  inference.py  ling_data_structures.py  model.py  utils.py
test/: test_utils.py
